adding wishlist using Redux

--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -27,6 +27,14 @@
     position: absolute;
     right: 5%;
     top: 2%;
+    scale: 1.2;
+}
+.addIcon{
+    cursor: pointer;
+    position: absolute;
+    left: 5%;
+    top: 2%;
+    scale: 1.2;
 }
 
 .header__card{
