--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -45,12 +45,20 @@
     margin-bottom: 10px;
 }
 
-
-
 .middle__part{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
     width: 100%;
+}
+
+
+/* Mobile  */
+
+@media (max-width: 431px) {
+  
+    .product{
+        width: 100%;
+    }
 }
