--- a/src/components/wishlist/Wishlist.module.css
+++ b/src/components/wishlist/Wishlist.module.css
@@ -5,7 +5,7 @@
     margin-top: 100px;
 }
 
-.empty{
+.empty {
     height: 100vh;
     text-align: center;
     padding-top: 200px;
@@ -53,4 +53,30 @@
 .weight {
     font-weight: bold;
     padding-bottom: 15px;
+}
+
+
+@media (max-width: 431px) {
+    .card {
+        flex-direction: column;
+        position: relative;
+    }
+
+    .figure {
+        width: 100%;
+    }
+
+    .container {
+        height: 100%;
+        margin-top: 30px;
+    }
+
+    .card__right {
+        position: static;
+    }
+
+    .wishIcon {
+        left: 17%;
+        top: 3.5%;
+    }
 }
